public static class PlayerAnimationTriggers
{
	public static readonly string Idle = "Idle";
	public static readonly string Jump = "Jump";
	public static readonly string Run = "Run";
	public static readonly string Slide = "Slide";
	public static readonly string Stumble = "Stumble";
	public static readonly string Dance = "Dance";
	public static readonly string Cry = "Cry";
}
